Added script to read folder directory

--- a/CMDB_Automation.ipynb
+++ b/CMDB_Automation.ipynb
@@ -6,8 +6,8 @@
       "name": "CMDB Automation",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1ijynLYwVjCTsEiqVBQRQnSn4iEODZiHP",
-      "authorship_tag": "ABX9TyOe8AoTAMc+bRXAF79Nm5Pe",
+      "mount_file_id": "https://github.com/zahidhamidi/GEES/blob/main/CMDB_Automation.ipynb",
+      "authorship_tag": "ABX9TyP/riZ1/r/J/lHO3byBK1/u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,52 +43,46 @@
         "import re\n",
         "import numpy as np\n"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9XsmnAKfLHga"
+        "id": "PFoCZkDXVhkT",
+        "outputId": "436d512e-3e44-4412-ce00-7c630b9889ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "by-59LW8L6mL"
-      },
-      "source": [
-        "# # Upload 5 files\n",
+        "## python script to read all file names directory in a folder\n",
         "\n",
-        "# from google.colab import files\n",
-        "# upload = files.upload()\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "iSPQ5GWw4N3l"
-      },
-      "source": [
-        "# # Rename uploaded files\n",
+        "path = '/content/drive/MyDrive/PETRONAS'\n",
         "\n",
-        "# # Absolute path of a file\n",
-        "# old_name = r\"/content/ICT2U_New PC Request_ServiceOwner_OrderStatus_08Nov2021.xlsx\"\n",
-        "# new_name = r\"ICT2U.xlsx\"\n",
         "\n",
-        "# # Renaming the file\n",
-        "# os.rename(old_name, new_name)"
+        "for root, directories, files in os.walk(path, topdown=False):\n",
+        "\tfor name in files:\n",
+        "\t\tprint(os.path.join(root, name))\n",
+        "\tfor name in directories:\n",
+        "\t\tprint(os.path.join(root, name))\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/PETRONAS/34 CMDB EUD Batch Upload Template V1.0_08112021.xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/People Details - 26 Aug 2021.xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/myGenie_Closed Date_DAAS (Desktop as a Service) Report – V2 - 22 Nov 2021.xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/00 CMDB Register_COMPILED (2).xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/35 CMDB EUD Batch Upload Template V1.0_18112021 (1).xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/ICT2U_New PC Request_ServiceOwner_OrderStatus_22Nov2021.xlsx\n",
+            "/content/drive/MyDrive/PETRONAS/35 CMDB EUD Batch Upload Template V1.0_18112021.xlsx\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
